Fixed portlet size: header background color, header font color, header border color Fixed icons vertical alignment Fixed incorrect trash icon in icons-and-logos.html

--- a/css/mycom-osi-icons-and-logos.css
+++ b/css/mycom-osi-icons-and-logos.css
@@ -28,7 +28,7 @@ i.icon-smallsize {
 
 i.icon-align-top {
    vertical-align: top;
-   padding-top: 2px;
+   padding-top: 4px;
 }
 
 i.icon-bottom {
