--- a/css/mycom-osi-portlet.css
+++ b/css/mycom-osi-portlet.css
@@ -1,11 +1,10 @@
 tr.portlet-header {
-   border-top: 3px solid rgba(139,182,0,1);
-   background-color: rgba(193,198,200, 0.2);
+   background-color: rgba(0,133,155, 0.6);
+   color: white;
+   border: 1px solid rgba(0,97,127,1);
 }
 
 td.portlet-header {
-   border: 0px;
-   color: black;
    font-style: bold;
 }
 
@@ -16,4 +15,9 @@ tr.portlet-window {
 td.portlet-window {
    border-style: none;
    background-color: white;
+}
+
+img.portlet-header {
+  padding: 1px;
+  vertical-align: top;
 }
